create simple draft transfer
