# backend_srv/internals/api/server.go
@@ -106,6 +106,7 @@ func (s *Server) callInit() {
 
 func (s *Server) warehouseRoutes() {
 	s.route.GET("/api/v1/warehouse/:location_code", s.GetLocationByLocationCode)
+	s.route.POST("/api/v1/warehouse/create-draft-transfer", s.CreateDraftWarehouseTransfer)
 }
 
 func (s *Server) userRoutes() {
